--- a/news.html
+++ b/news.html
@@ -82,6 +82,14 @@
 
                 <h1 class="page-header">News</h1>
 
+
+<h1 class="page-header"><small>December 2022</small></h1></a></strong>
+
+ <p>Congratulations to <strong>Yao Xiong</strong> on his recent publication: <strong> Yao Xiong, Olga Kuksenok <a href= https://www.sciencedirect.com/science/article/pii/S2589004222018788> " Photocontrol of pattern formation and hysteresis loops in polymer gels with host-guest interactions"</a></strong>, <em> Iscience </em> 25 (12),105606 </p>
+</strong> 
+<p>
+
+
 <h1 class="page-header"><small>September 2022</small></h1></a></strong>
 
  <p>Congratulations to <strong>Vaibhav Palkar</strong>: images of controlled degradation of hydrogels are now available on <strong> LAMMPS picture gallery: <a href= https://lammps.org/pictures.html#hydrodegrade> https://lammps.org/pictures.html#hydrodegrade </a></strong>
@@ -102,6 +110,19 @@
     _________________________________
 
 <p>Congratulations Dr. Sidong Tu and Dr. Yao Xiong! Wishing you both success in your future endeavors</strong> 
+
+                <p>
+                <a href= images/photos/grad3.jpg> <img src="images/photos/grad3_.jpg" width="460"></p> </a>
+                <p>
+                <a href= images/photos/grad3.jpg> <img src="images/photos/grad1_.jpg" width="460"></p> </a>
+                <p>
+                <a href= images/photos/grad3.jpg> <img src="images/photos/grad2_.jpg" width="460"></p> </a>
+
+
+<p>
+                <a href= images/photos/grad1.jpg> <img src="images/photos/cake1.jpg" height="196"></a>&nbsp;
+                <a href= images/photos/grad2.jpg><img src="images/photos/cake2.jpg" height="196"></p></a>
+ <p>______________________________</p>
 
 
 <p>
@@ -315,7 +336,7 @@ Congratulations to Oksana Savchak!<br><br>
 	</footer>
 
 	-->
-<p>Last updated: Sep 22, 2022</p>
+<p>Last updated: Jan 23, 2023</p>
 
 <!-- Start of StatCounter Code for Default Guide -->
 <script type="text/javascript">
