--- a/people.html
+++ b/people.html
@@ -91,26 +91,6 @@
                     </div>
                 </div>
                 <div class="item">
-        <div class="small2">
-                        <a name=st><img src=images/people/tu.png width=240></a>
-                    </div>
-                    <div class="description2">
-                        <p class="title2">Sidong Tu</p>
-                        <p class="subtitle">PhD Student</p>
-                        <p class="subtitle">sidongt@g.<img src=images/emailsuffix.png height=16></p>
-                    </div>
-                </div>
-                <div class="item">
-                    <div class="small2">
-                        <a name=yx><img src=images/people/xiong.png width=240></a>
-                    </div>
-                    <div class="description2">
-                        <p class="title2">Yao Xiong</p>
-                        <p class="subtitle">PhD Student</p>
-                        <p class="subtitle">xiong3@g.<img src=images/emailsuffix.png height=16></p>
-                    </div>
-                </div>
-                <div class="item">
 
                     <div class="small2">
                         <a name=vp><img src=images/people/palkar.png width=240></a>
@@ -119,11 +99,28 @@
                         <p class="title2">Vaibhav Palkar</p>
                         <p class="subtitle">PhD Student</p>
                         <p class="subtitle">vpalkar@g.<img src=images/emailsuffix.png height=16></p>
-
-
                     </div>
                 </div>
- 
+                <div class="item">
+        <div class="small2">
+                        <a name=st><img src=images/people/Anik.jpg width=240></a>
+                    </div>
+                    <div class="description2">
+                        <p class="title2">Arefin Mustafa Anik</p>
+                        <p class="subtitle">PhD Student</p>
+                        <p class="subtitle">aanik@g.<img src=images/emailsuffix.png height=16></p>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="small2">
+                        <a name=yx><img src=images/people/Cassie.png width=240></a>
+                    </div>
+                    <div class="description2">
+                        <p class="title2">Cassandra Simpson </p>
+                        <p class="subtitle">Undegraduate Reasearch Assistant </p>
+                        <p class="subtitle">csimps9@g.<img src=images/emailsuffix.png height=16></p>
+                    </div>
+                </div> 
 
 <h1 class="page-header">Former Group Members</h1>
 
@@ -139,6 +136,30 @@
                 </div>
 
 <h2>Graduate students</h2>
+
+
+<div class="item">
+        <div class="small2">
+                        <a name=st><img src=images/people/tu.png width=240></a>
+                    </div>
+                    <div class="description2">
+                        <p class="title2">Sidong Tu</p>
+                        <p class="subtitle">PhD Aug 2022</p>
+                        <p class="subtitle">Now <strong>Postdoctoral Research Associate at Case Western Reserve University, Cleveland, OH </strong></p>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="small2">
+                        <a name=yx><img src=images/people/xiong.png width=240></a>
+                    </div>
+                    <div class="description2">
+                        <p class="title2">Yao Xiong</p>
+                        <p class="subtitle">PhD Aug 2022</p>
+                         <p class="subtitle">Now <strong>Postdoctoral Research Associate at Northhwestern University Evanston, IL </strong></p>
+                    </div>
+                </div>
+
+
 <div class="item">
     <div class="small2">
         <a name="os"><img src=images/people/savchak.png width=240></a>
@@ -275,6 +296,7 @@
                         <p class="subtitle">now Ph.D. student at Ohio State University, Columbus</p>
                     </div>
                 </div>
+<p>Last updated: Jan 23, 2023</p>
 
                 </ul>
             </div>
