--- a/news.html
+++ b/news.html
@@ -82,10 +82,22 @@
 
                 <h1 class="page-header">News</h1>
 
+<h1 class="page-header"><small>March 2023</small></h1>
+
+<strong> Congratulations to Vaibhav Palkar <strong> on presenting his research as a finalist in  <strong> <a href= https://meetings.aps.org/Meeting/MAR23/Session/G05.9> Padden Award Symposium at APS March 2023</a></strong>
+</p>
+</strong> <img src="images/padden_2.jpg" width="420"</a>
+   </p>
+          <img src="images/padden_1.jpg" width="420"</a>
+
+<h1 class="page-header"><small>February 2023</small></h1></a></strong>
+
+ <p>Congratulations to <strong>Vaibhav Palkar</strong> and <strong>Devanshu Thakar</strong> on their recent publication: Vaibhav Palkar, Devanshu Thakar, Olga Kuksenok <a href= https://pubs.acs.org/doi/full/10.1021/acs.macromol.2c02470> " <strong> Nanogel Degradation at Soft Interfaces and in Bulk: Tracking Shape Changes and Interfacial Spreading"</a></strong>, <em><strong> Macromolecules </em></strong> 56 (4),1289-1302, (2023) </p>
+<p>
 
 <h1 class="page-header"><small>December 2022</small></h1></a></strong>
 
- <p>Congratulations to <strong>Yao Xiong</strong> on his recent publication: <strong> Yao Xiong, Olga Kuksenok <a href= https://www.sciencedirect.com/science/article/pii/S2589004222018788> " Photocontrol of pattern formation and hysteresis loops in polymer gels with host-guest interactions"</a></strong>, <em> Iscience </em> 25 (12),105606 </p>
+ <p>Congratulations to <strong>Yao Xiong</strong> on his recent publication: <strong> Yao Xiong, Olga Kuksenok <a href= https://www.sciencedirect.com/science/article/pii/S2589004222018788> " Photocontrol of pattern formation and hysteresis loops in polymer gels with host-guest interactions"</a></strong>, <strong><em> iScience </em> </strong>25 (12),105606 </p>
 </strong> 
 <p>
 
@@ -336,7 +348,7 @@ Congratulations to Oksana Savchak!<br><br>
 	</footer>
 
 	-->
-<p>Last updated: Jan 23, 2023</p>
+<p>Last updated: Mar 14, 2023</p>
 
 <!-- Start of StatCounter Code for Default Guide -->
 <script type="text/javascript">
