--- a/pubs.html
+++ b/pubs.html
@@ -82,57 +82,58 @@
                 </h1>
 <!-- Image -->
                 <A href=https://pubs.acs.org/doi/abs/10.1021/acs.jpcb.1c09570><img src="images/jpcb.png" class="illustration"></A>                 
-
-<p> 97. Yao Xiong, Olga Kuksenok <a href= https://www.sciencedirect.com/science/article/pii/S2589004222018788> " <strong>Photocontrol of pattern formation and hysteresis loops in polymer gels with host-guest interactions"</a></strong>, <em> Iscience </em> 25 (12),105606 </p>
+<p> 98. Vaibhav Palkar, Devanshu Thakar, Olga Kuksenok <a href= https://pubs.acs.org/doi/full/10.1021/acs.macromol.2c02470> " <strong>Nanogel Degradation at Soft Interfaces and in Bulk: Tracking Shape Changes and Interfacial Spreading"</a></strong>, <em><strong> Macromolecules </em></strong> 56 (4),1289-1302, (2023) </p>
 </strong> 
-<p> 96.  Yao Xiong, Chandan K Choudhury, Vaibhav Palkar, Raleigh Wunderlich, Rajendra K Bordia, and Olga Kuksenok <strong><a href= https://www.mdpi.com/2079-4991/12/18/3117> "Mesoscale Modeling of Phase Separation Controlled by Hydrosilylation in Polyhydromethylsiloxane (PHMS)-Containing Blends"</a></strong>, <em> Nanomaterials </em> 12 (18), 3117 (2022) </p>
+<p> 97. Yao Xiong, Olga Kuksenok <a href= https://www.sciencedirect.com/science/article/pii/S2589004222018788> " <strong>Photocontrol of pattern formation and hysteresis loops in polymer gels with host-guest interactions"</a></strong>, <em> <strong>iScience </strong></em> 25 (12),105606, (2022) </p>
 </strong> 
-<p> 95. Mengxue Zhang, Taylor Larison, Sidong Tu, Olga Kuksenok, and Morgan Stefik <strong> <a href= https://pubs.acs.org/doi/10.1021/acsapm.2c00968> "Effect of Fluorophobic Character upon Switching Nanoparticles in Polymer Films from Aggregated to Dispersed States Using Immersion Annealing"</a></strong>,  <em> ACS Applied Polymer Materials </em> 10.1021/acsapm.2c00968 (2022) </p>
-<p> 94. S. Tu, C.K. Choudhury, M. Giltner, I. Luzinov, O. Kuksenok <strong><a href= https://www.mdpi.com/2073-4360/14/12/2339> "Mesoscale Modeling of Agglomeration of Molecular Bottlebrushes: Focus on Conformations and Clustering Criteria"</a></strong>, <em> Polymers </em> 14 (12), 2339 (2022) </p>
+<p> 96.  Yao Xiong, Chandan K Choudhury, Vaibhav Palkar, Raleigh Wunderlich, Rajendra K Bordia, and Olga Kuksenok <strong><a href= https://www.mdpi.com/2079-4991/12/18/3117> "Mesoscale Modeling of Phase Separation Controlled by Hydrosilylation in Polyhydromethylsiloxane (PHMS)-Containing Blends"</a></strong>, <em> <strong> Nanomaterials</strong> </em> 12 (18), 3117 (2022) </p>
 </strong> 
-<p> 93. V. Palkar, O. Kuksenok <strong> <a href= https://pubs.acs.org/doi/abs/10.1021/acs.jpcb.1c09570> "Controlling Degradation and Erosion of Polymer Networks: Insights from Mesoscale Modeling"</a></strong>,  <em> J. Phys. Chem. B </em> 126, 1, 336–346 (2022) </p>
+<p> 95. Mengxue Zhang, Taylor Larison, Sidong Tu, Olga Kuksenok, and Morgan Stefik <strong> <a href= https://pubs.acs.org/doi/10.1021/acsapm.2c00968> "Effect of Fluorophobic Character upon Switching Nanoparticles in Polymer Films from Aggregated to Dispersed States Using Immersion Annealing"</a></strong>,  <em> <strong>ACS Applied Polymer Materials</strong> </em> 4, 10, 7042–7053 (2022) </p>
+<p> 94. S. Tu, C.K. Choudhury, M. Giltner, I. Luzinov, O. Kuksenok <strong><a href= https://www.mdpi.com/2073-4360/14/12/2339> "Mesoscale Modeling of Agglomeration of Molecular Bottlebrushes: Focus on Conformations and Clustering Criteria"</a></strong>, <em> <strong>Polymers </strong></em> 14 (12), 2339 (2022) </p>
+</strong> 
+<p> 93. V. Palkar, O. Kuksenok <strong> <a href= https://pubs.acs.org/doi/abs/10.1021/acs.jpcb.1c09570> "Controlling Degradation and Erosion of Polymer Networks: Insights from Mesoscale Modeling"</a></strong>,  <em> <strong> Journal of Physical Chemistry B </strong></em> 126, 1, 336–346 (2022) </p>
 
-<p> 92. X. Wang, J. Bowman, S. Tu, D. Nykypanchuk, O. Kuksenok, and S. Minko <strong> <a href= https://pubs.acs.org/doi/10.1021/acs.langmuir.1c00872> "Polyethylene Glycol Crowder’s Effect on Enzyme Aggregation, Thermal Stability, and Residual Catalytic Activity"</a></strong>,  <em> Langmuir </em> 37, 28, 8474–8485 (2021) </p>
+<p> 92. X. Wang, J. Bowman, S. Tu, D. Nykypanchuk, O. Kuksenok, and S. Minko <strong> <a href= https://pubs.acs.org/doi/10.1021/acs.langmuir.1c00872> "Polyethylene Glycol Crowder’s Effect on Enzyme Aggregation, Thermal Stability, and Residual Catalytic Activity"</a></strong>,  <em> <strong>Langmuir </em> </strong> 37, 28, 8474–8485 (2021) </p>
 
-<p> 91. Xiong, Y., Kuksenok, O. <strong> <a href= https://pubs.acs.org/doi/full/10.1021/acs.langmuir.1c00138> "Mechanical Adaptability of Patterns in Constrained Hydrogel Membranes"</a></strong>,  <em> Langmuir (2021) </em> </p>
+<p> 91. Xiong, Y., Kuksenok, O. <strong> <a href= https://pubs.acs.org/doi/full/10.1021/acs.langmuir.1c00138> "Mechanical Adaptability of Patterns in Constrained Hydrogel Membranes"</a></strong>,  <em> <strong>Langmuir </strong>37 (16), 4900–4912 (2021) </em> </p>
     <A href=https://pubs.acs.org/doi/10.1021/acs.jpcb.0c08603><img src="images/FrontCoverArt.png" class="illustration"></A> 
     <A href= https://pubs.acs.org/doi/full/10.1021/acs.langmuir.1c00138><img src="images/Patterns.png" class="illustration"></A> 
-<p> 90. Choudhury, C. K., Kuksenok, O. <strong> <a href= https://pubs.acs.org/doi/10.1021/acs.jpcb.0c08603> "Native-Based Dissipative Particle Dynamics Approach for <i>α</i>-Helical Folding"</a></strong>,  <em> Journal of Physical Chemistry B (2020) </em> </p>
+<p> 90. Choudhury, C. K., Kuksenok, O. <strong> <a href= https://pubs.acs.org/doi/10.1021/acs.jpcb.0c08603> "Native-Based Dissipative Particle Dynamics Approach for <i>α</i>-Helical Folding"</a></strong>,  <em> <strong>Journal of Physical Chemistry B </strong> 124, 50, 11379–11386 (2020) </em> </p>
 
-<p> 89. Wei, L, Caliskan, T.D., Tu, S., Choudhury, C.K, Kuksenok, O, Luzinov, I. <strong><a href= https://pubs.acs.org/doi/abs/10.1021/acsami.0c08649 > "Highly Oil-Repellent Thermoplastic Boundaries via Surface Delivery of CF3 Groups by Molecular Bottlebrush Additives"</a></strong>, <em>ACS Applied Materials & Interfaces (2020) </em> 12 (34), 38626-38637 </p>
+<p> 89. Wei, L, Caliskan, T.D., Tu, S., Choudhury, C.K, Kuksenok, O, Luzinov, I. <strong><a href= https://pubs.acs.org/doi/abs/10.1021/acsami.0c08649 > "Highly Oil-Repellent Thermoplastic Boundaries via Surface Delivery of CF3 Groups by Molecular Bottlebrush Additives"</a></strong>, <em><strong>ACS Applied Materials & Interfaces </strong></em> 12 (34), 38626-38637 (2020)</p>
                 <A href=https://pubs.rsc.org/en/content/articlelanding/2018/sm/c8sm01207e#!divAbstract><img src="images/BackCover.jpg" class="illustration"></A> 
 
                 <A href=https://pubs.acs.org/doi/abs/10.1021/acscatal.7b03138><img src="images/accacs_v007i012-4.jpg" class="illustration"></A> 
 <p>88.  Palkar, V., Choudhury, C. K., Kuksenok, O. <strong><a href= https://www.cambridge.org/core/journals/mrs-advances/article/development-of-dissipative-particle-dynamics-framework-for-modeling-hydrogels-with-degradable-bonds/CDC9885D7BEEAD54B908870669A68923
->"Development of Dissipative Particle Dynamics framework for modeling hydrogels with degradable bonds”</a></strong>. <em>MRS Advances (2020)</em>, 5(17), 927-934 </p>
+>"Development of Dissipative Particle Dynamics framework for modeling hydrogels with degradable bonds”</a></strong>. <em><strong>MRS Advances</strong> </em>, 5(17), 927-934 (2020)</p>
 
 <p>87. Choudhury, C. K.,  Palkar, V., Kuksenok, O. <strong><a href= https://pubs.acs.org/doi/pdf/10.1021/acs.langmuir.9b03486
->"Computational design of nanostructured soft interfaces: focus on shape changes and spreading of cubic nanogels”</a></strong>. <em>Langmuir (2020) 36, 25, 7109–7123</em> </p>
+>"Computational design of nanostructured soft interfaces: focus on shape changes and spreading of cubic nanogels”</a></strong>. <em><strong>Langmuir</strong> 36, 25, 7109–7123 (2020)</em> </p>
 
 <p>86. Palkar, V., Aprelev, V.,  Salamatin, A., Brasovs. A., Kuksenok, O, Kornev, K.G.  <strong><a href= https://journals.aps.org/pre/abstract/10.1103/PhysRevE.100.051101
 
->"Rotating magnetic nanorods detect minute fluctuations of magnetic field”</a></strong>. Phys. Rev. E 100, 051101 (2019) </p>
+>"Rotating magnetic nanorods detect minute fluctuations of magnetic field”</a></strong>. <strong>Phys. Rev. E </strong> 100, 051101 (2019) </p>
 
 
 <p>85. Tu, S., Choudhury, C. K., Luzinov, I., Kuksenok., O. <strong><a href= https://doi.org/10.1016/j.cossms.2019.01.003
->"Recent advances towards applications of molecular bottlebrushes and their Conjugates”</a></strong>. <em> Current Opinion in Solid State and Materials Science </em> , 23 (1), 50-61 (2019)</p>
+>"Recent advances towards applications of molecular bottlebrushes and their Conjugates”</a></strong>. <em> <strong>Current Opinion in Solid State and Materials Science </strong></em> , 23 (1), 50-61 (2019)</p>
 </p>
 <!-- Image -->
                 <A href=http://onlinelibrary.wiley.com/doi/10.1002/adfm.201203876/abstract><img src="images/Ref60.jpg" class="illustration"></A> 
-<p>84. Savchak, O., Morrison, T., Kornev, K.G. and Kuksenok, O. <strong><a href=https://pubs.rsc.org/en/content/articlelanding/2018/sm/c8sm01207e#!divAbstract>Controlling deformations of gel-based composites by electromagnetic signals within the GHz frequency range.</a></strong> <em>Soft matter</em>, 14(43), pp.8698-8708 (2018)</p>
+<p>84. Savchak, O., Morrison, T., Kornev, K.G. and Kuksenok, O. <strong><a href=https://pubs.rsc.org/en/content/articlelanding/2018/sm/c8sm01207e#!divAbstract>Controlling deformations of gel-based composites by electromagnetic signals within the GHz frequency range.</a></strong> <em><strong>Soft matter</strong></em>, 14(43), pp.8698-8708 (2018)</p>
 
-<p>83. Schiller, U.D. and Kuksenok, O., 2018. <strong><a href=https://onlinelibrary.wiley.com/doi/10.1002/9781119518068.ch1> "Lattice-Boltzmann Modelling of Multicomponent Systems: An Introduction."</strong> </a> <em>Reviews in Computational Chemistry</em>, 31, p.1. John Wiley & Sons (2018)</p>
+<p>83. Schiller, U.D. and Kuksenok, O., 2018. <strong><a href=https://onlinelibrary.wiley.com/doi/10.1002/9781119518068.ch1> "Lattice-Boltzmann Modelling of Multicomponent Systems: An Introduction."</strong> </a> <em><strong>Reviews in Computational Chemistry</strong></em>, 31, p.1. John Wiley & Sons (2018)</p>
 
 <p>82. Kuksenok, O., Liu, Y., Balazs, A.C. <strong><a href=https://books.google.com/books/about/Atlas_of_Cilia_Bioengineering_and_Biocom.html?id=N4RBuAEACAAJ> "Modeling Gel-based Artificial Cilia."</a> </strong> <em>Atlas of Cilia Bioengineering and Biocomputing</em>, 149 (2018)</p>
 
-<p>81. Choudhury, C.K., Tu, S., Luzinov, I., Minko, S., Kuksenok, O., <strong><a href=https://pubs.acs.org/doi/abs/10.1021/acs.biomac.8b00027?af=R>"Designing Highly Thermostable Lysozyme-Copolymer Conjugates: Focus on Effect of Polymer Concentration"</a></strong> <em>Biomacromolecules</em> 19 (4), 1175-1188 (2018) </p>
+<p>81. Choudhury, C.K., Tu, S., Luzinov, I., Minko, S., Kuksenok, O., <strong><a href=https://pubs.acs.org/doi/abs/10.1021/acs.biomac.8b00027?af=R>"Designing Highly Thermostable Lysozyme-Copolymer Conjugates: Focus on Effect of Polymer Concentration"</a></strong> <em><strong>Biomacromolecules</strong></em> 19 (4), 1175-1188 (2018) </p>
 
 <p>80. Xiong, Y., Dayal, P., Balazs, A.C., Kuksenok, O., <strong><a href=https://onlinelibrary.wiley.com/doi/full/10.1002/ijch.201700137
->"Phase Transitions and Pattern Formation in Chemo‐Responsive Gels and Composites"</strong></a> Israel Journal of Chemistry (2018).</p>
+>"Phase Transitions and Pattern Formation in Chemo‐Responsive Gels and Composites"</strong></a> <strong>Israel Journal of Chemistry</strong> 58, 6-7, 693-705 (2018).</p>
 
 
 <p>79. Choudhury, C.K., Kuksenok, O., <strong><a href=https://www.cambridge.org/core/journals/mrs-advances/article/modeling-dynamics-of-polyacrylamide-gel-in-oilwater-mixtures-dissipative-particle-dynamics-approach/83EE1348E6F224646C738462D7AC39A3
->"Modeling dynamics of Polyacrylamide Gel in Oil-Water Mixtures: Dissipative Particle Dynamics Approach"</a></strong> MRS Advances, 1-6.</p>
+>"Modeling dynamics of Polyacrylamide Gel in Oil-Water Mixtures: Dissipative Particle Dynamics Approach"</a></strong> <strong>MRS Advances</strong>, 1-6 (2018)</p>
 
 
 <p>78. Kuksenok, O., Singh, A., Balazs, A., <strong>"Designing polymer gels and composites that undergo bio-inspired phototactic reconfiguration and motion.</strong> <em>Bioinspiration & biomimetics</em> 13 (3), 035004 (2018)</p>
@@ -144,7 +145,7 @@
 
 
 <A href=https://pubs.rsc.org/en/content/articlelanding/2016/mh/c5mh00212e><img src="images/MH.png" class="illustration"></A> 
-<p>76. Yadavalli N.S., Borodinov, N., Choudhury, C.K., Quiñones-Ruiz, T., Laradji, A.M., Tu, S., Lednev, I.K., Kuksenok, O., Luzinov, I., and S. Minko. <strong><a href=https://pubs.acs.org/doi/abs/10.1021/acscatal.7b03138>"Thermal Stabilization of Enzymes with Molecular Brushes"</a></strong> ACS Catalysis 7 (12), 8675-8684
+<p>76. Yadavalli N.S., Borodinov, N., Choudhury, C.K., Quiñones-Ruiz, T., Laradji, A.M., Tu, S., Lednev, I.K., Kuksenok, O., Luzinov, I., and S. Minko. <strong><a href=https://pubs.acs.org/doi/abs/10.1021/acscatal.7b03138>"Thermal Stabilization of Enzymes with Molecular Brushes"</a></strong> <strong> ACS Catalysis </strong> 7 (12), 8675-8684 (2017)
 </p>
 
 <p>75. Singh, A., Kuksenok, O., Johnson, J.A., Balazs, A.C., <strong>"Photo-regeneration of severed gel with iniferter-mediated photo-growth"</strong>Soft matter 13 (10), 1978-1987(2017)</p>
@@ -300,7 +301,7 @@
 </p>
 <p>1. Kuksenok, O., Sugakov, V.I., and Shiyanovskii, S.V., “On the mechanism of negative effect of ionizing irradiation on conductivity of liquid crystals,” Ukrainian Physical Journal, 37 (4), 589-594 (1992).
 
-<p>Last updated: Jan 23, 2023</p>
+<p>Last updated: Mar 14, 2023</p>
 
                 </ul>
             </div>
