--- a/news.html
+++ b/news.html
@@ -84,6 +84,15 @@
 
 <h1 class="page-header"><small>March 2023</small></h1>
 
+<strong> Congratulations to Vaibhav Palkar <strong> on presenting his research in  <strong> ACS 2023 Excellence in Graduate Polymer Research Symposium </strong>
+</p>
+</strong> <img src="images/ACS.jpg" width="410"</a>
+</p>
+<strong> Congratulations to Cassie Simpson on presenting her research in  MRS Clemson Chapter (image below) and in virtual Spring ACS 2023 meeting
+</p>
+</strong> <img src="images/Cassie_MRS.jpg" width="400"</a>
+   
+</p>
 <strong> Congratulations to Vaibhav Palkar <strong> on presenting his research as a finalist in  <strong> <a href= https://meetings.aps.org/Meeting/MAR23/Session/G05.9> Padden Award Symposium at APS March 2023</a></strong>
 </p>
 </strong> <img src="images/padden_2.jpg" width="420"</a>
@@ -348,7 +357,7 @@ Congratulations to Oksana Savchak!<br><br>
 	</footer>
 
 	-->
-<p>Last updated: Mar 14, 2023</p>
+<p>Last updated: Apr 2, 2023</p>
 
 <!-- Start of StatCounter Code for Default Guide -->
 <script type="text/javascript">
