--- a/index.html
+++ b/index.html
@@ -104,9 +104,9 @@
 
 
                 <p style="margin-top:20px">
-                <b>We focus on computational design of advanced polymer-based materials. Such materials include biomimetic materials, where the aim is to design fully syntetic materials with properties and functionalities inspired by nature. For the current updates, check our <a href=https://cecas.clemson.edu/kuksenoklab/news.html>News</a> page.</b>
+                <b>We focus on computational design of advanced polymer-based materials. Such materials include biomimetic materials, where the aim is to design fully synthetic materials with properties and functionalities inspired by nature. For the current updates, check our <a href=https://cecas.clemson.edu/kuksenoklab/news.html>News</a> page.</b>
 
-                <br></br> About the PI: Dr. Kuksenok is an Associate Professor and Director of Graduate Program at the Materials Science and Engineering Department at Clemson University.  She  received her PhD in Physics and Mathematics from the Institute of Physics, National Academy of Sciences of Ukraine, Kiev, Ukraine. Dr. Kuksenok’s research interests and accomplishments span the following areas: elastodynamics of responsive polymer gels, dynamics of multi-component polymer blends, biomimetic and biological materials, and pattern formation in non-equilibrium systems.  <em><a href=https://scholar.google.com/citations?user=T9icvtgAAAAJ&hl=en&oi=ao><strong>More on Google Scholar </strong></a></em></p>
+                <br></br> About the PI: Dr. Kuksenok is an Associate Professor and Director of Graduate Program at the Materials Science and Engineering Department at Clemson University.  She  received her PhD in Physics and Mathematics from the Institute of Physics, National Academy of Sciences of Ukraine, Kiev, Ukraine. Dr. Kuksenok’s research interests and accomplishments include modeling of polymer blends and networks on multiple length scales, computational design of responsive materials, biomimetic and biological materials, and pattern formation in non-equilibrium systems.  <em><a href=https://scholar.google.com/citations?user=T9icvtgAAAAJ&hl=en&oi=ao><strong>More on Google Scholar </strong></a></em></p>
                 <br>
                 <div class="h2">Research Areas</div>
 <ul>
@@ -123,21 +123,18 @@
 
 <p>&nbsp;</p>
 
-<div class="h2"> PhD/MS Openings 2022/2023 <small style="background-color:#eee; padding:3px;"><em>Updated!</em></small></div>
+<div class="h2"> Openings <small style="background-color:#eee; padding:3px;"><em>Updated!</em></small></div>
 <p>&nbsp;</p>
-<p><strong>PROSPECTIVE GRADUATE STUDENTS </strong> </p>
-<p><strong>PhD opening:</strong> Looking for a highly motivated student to join our group to pursue his/her/their PhD degree in Materials Science and Engineering. The research will focus on modeling microwave-triggered controlled fragmentation of conventional thermoplastics into macromolecular chains fragments. Functionalized nanosheets dispersed within the polyolefin materials will localize heating and trigger fragmentation upon application of short microwave pulses. A multiscale model integrating coarse-grained and continuum approaches will be developed. This project will be conducted in close collaboration with concurrent experiments in Dr. Luzinov’s group. Model parameters will be based on the experimental data, and model predictions will be validated in the experiments. The long-term goal of the project is to design materials with properties of conventional thermoplastics but capable of end-of-life controlled deconstruction into reusable polymer chain fragments.</p> <p><strong>Requirements:</strong> some prior programming experience (C/C++, python, COMSOL Multiphysics@, or related experience) is required. If interested please send your curriculum vitae and a cover letter detailing your previous programming experience to Dr. Kuksenok at <em>okuksen@clemson.edu</em>. The position is available immediately, however the starting date is negotiable (Fall 2022, Spring/Summer/Fall 2023).
-<p>&nbsp;</p>
-<p><strong> PROSPECTIVE MASTER STUDENTS  </strong> </p>
-Looking for a highly motivated student to join our group to pursue his/her/their Master degree in Computational Materials Materials Science and Engineering. This position is available immediately <b>  (Fall 2022) </b>. Some prior programming experience (preferably in one of the following: COMSOL Multiphysics@, C/C++, Python, LAMMPS or related) is required. If interested please send your curriculum vitae and a brief description of your programming experience to Dr. Kuksenok at <em>okuksen@clemson.edu</em>
+
+
+<p><strong>Graduate students:</strong> We are often looking for highly motivated students to join our group to pursue their PhD or MS degrees in Materials Science and Engineering. For current openings please contact Dr. Kuksenok directly.  Some prior programming experience (C/C++, python, LAMMPS, COMSOL Multiphysics@, or related experience) is required. 
 
 <p>&nbsp;</p>
-<p><strong> UNDERGRADUATE STUDENTS  </strong> </p>
-<p><strong>Undergraduate researchers:</strong>    We have several openings for Clemson undergraduate students to participate in research projects involving computational modeling available immediately. Some prior programming experience (preferably in one of the following: COMSOL Multiphysics@, C/C++, Python, LAMMPS or related) is required. If interested please send your curriculum vitae and a brief description of your programming experience to Dr. Kuksenok at <em>okuksen@clemson.edu</em>
+<p><strong>Undergraduate research assistants:</strong>    We have several openings for Clemson undergraduate students to participate in research projects involving computational modeling <strong>available immediately</strong>. Some prior programming experience (preferably in one of the following: COMSOL Multiphysics@, C/C++, Python, LAMMPS or related) is required. If interested please send your curriculum vitae and a brief description of your programming experience to Dr. Kuksenok at <em>okuksen@clemson.edu</em>
 <br></br>
 
 <p>&nbsp;</p>
-<p>Last updated: Sep 5, 2022</p>
+<p>Last updated: Aug 8, 2023</p>
 
 <p>&nbsp;</p>
 
