--- a/news.html
+++ b/news.html
@@ -82,6 +82,21 @@
 
                 <h1 class="page-header">News</h1>
 
+<h1 class="page-header"><small>May 2023</small></h1>
+<p><strong>Congratulations Dr. Vaibhav Palkar! Wishing you success in your future endeavors!</strong> 
+
+                <p>
+                <a href= images/photos/Vaibhav1.jpg> <img src="images/photos/Vaibhav1.jpg" width="460"></p> </a>
+                <p>
+                <a href= images/photos/Vaibhav2.jpg> <img src="images/photos/Vaibhav2.jpg" width="460"></p> </a>
+                <p>
+
+
+<p>
+                <a href= images/photos/party1.jpg> <img src="images/photos/party1.jpg" height="280"></a>&nbsp;
+                <a href= images/photos/party2.jpg><img src="images/photos/party2.jpg" height="280"></p></a>
+ <p>______________________________</p>
+
 <h1 class="page-header"><small>March 2023</small></h1>
 
 <strong> Congratulations to Vaibhav Palkar <strong> on presenting his research in  <strong> ACS 2023 Excellence in Graduate Polymer Research Symposium </strong>
@@ -133,16 +148,16 @@
 <p>Congratulations Dr. Sidong Tu and Dr. Yao Xiong! Wishing you both success in your future endeavors</strong> 
 
                 <p>
-                <a href= images/photos/grad3.jpg> <img src="images/photos/grad3_.jpg" width="460"></p> </a>
+                <a href= images/photos/grad3_.jpg> <img src="images/photos/grad3_.jpg" width="460"></p> </a>
                 <p>
-                <a href= images/photos/grad3.jpg> <img src="images/photos/grad1_.jpg" width="460"></p> </a>
+                <a href= images/photos/grad1_.jpg> <img src="images/photos/grad1_.jpg" width="460"></p> </a>
                 <p>
-                <a href= images/photos/grad3.jpg> <img src="images/photos/grad2_.jpg" width="460"></p> </a>
+                <a href= images/photos/grad2_.jpg> <img src="images/photos/grad2_.jpg" width="460"></p> </a>
 
 
 <p>
-                <a href= images/photos/grad1.jpg> <img src="images/photos/cake1.jpg" height="196"></a>&nbsp;
-                <a href= images/photos/grad2.jpg><img src="images/photos/cake2.jpg" height="196"></p></a>
+                <a href= images/photos/cake1.jpg> <img src="images/photos/cake1.jpg" height="196"></a>&nbsp;
+                <a href= images/photos/cake2.jpg><img src="images/photos/cake2.jpg" height="196"></p></a>
  <p>______________________________</p>
 
 
