--- a/people.html
+++ b/people.html
@@ -92,16 +92,6 @@
                 </div>
                 <div class="item">
 
-                    <div class="small2">
-                        <a name=vp><img src=images/people/palkar.png width=240></a>
-                    </div>
-                    <div class="description2">
-                        <p class="title2">Vaibhav Palkar</p>
-                        <p class="subtitle">PhD Student</p>
-                        <p class="subtitle">vpalkar@g.<img src=images/emailsuffix.png height=16></p>
-                    </div>
-                </div>
-                <div class="item">
         <div class="small2">
                         <a name=st><img src=images/people/Anik.jpg width=240></a>
                     </div>
@@ -112,12 +102,34 @@
                     </div>
                 </div>
                 <div class="item">
+
+                    <div class="small2">
+                        <a name=vp><img src=images/people/Mira.png width=240></a>
+                    </div>
+                    <div class="description2">
+                        <p class="title2">Zafrin Ferdous Mira</p>
+                        <p class="subtitle">PhD Student</p>
+                        <p class="subtitle">zmira@g.<img src=images/emailsuffix.png height=16></p>
+                    </div>
+                </div>
+                <div class="item">
+
+                    <div class="small2">
+                        <a name=vp><img src=images/people/Rupali.png width=240></a>
+                    </div>
+                    <div class="description2">
+                        <p class="title2">Rupali Sharma</p>
+                        <p class="subtitle">PhD Student</p>
+                        <p class="subtitle">rupalis@g.<img src=images/emailsuffix.png height=16></p>
+                    </div>
+                </div>
+                <div class="item">
                     <div class="small2">
                         <a name=yx><img src=images/people/Cassie.png width=240></a>
                     </div>
                     <div class="description2">
                         <p class="title2">Cassandra Simpson </p>
-                        <p class="subtitle">Undegraduate Reasearch Assistant </p>
+                        <p class="subtitle">M.S.Student </p>
                         <p class="subtitle">csimps9@g.<img src=images/emailsuffix.png height=16></p>
                     </div>
                 </div> 
@@ -137,13 +149,24 @@
 
 <h2>Graduate students</h2>
 
+<div class="item">
+
+                    <div class="small2">
+                        <a name=vp><img src=images/people/palkar.png width=240></a>
+                    </div>
+                    <div class="description2">
+                        <p class="title2">Dr. Vaibhav Palkar</p>
+                        <p class="subtitle">PhD May 2023</p>
+                         <p class="subtitle">Now <strong>Scientific Software Developer at Enthought, Austin, TX </strong></p>
+                    </div>
+                </div>
 
 <div class="item">
         <div class="small2">
                         <a name=st><img src=images/people/tu.png width=240></a>
                     </div>
                     <div class="description2">
-                        <p class="title2">Sidong Tu</p>
+                        <p class="title2">Dr. Sidong Tu</p>
                         <p class="subtitle">PhD Aug 2022</p>
                         <p class="subtitle">Now <strong>Postdoctoral Research Associate at Case Western Reserve University, Cleveland, OH </strong></p>
                     </div>
@@ -153,7 +176,7 @@
                         <a name=yx><img src=images/people/xiong.png width=240></a>
                     </div>
                     <div class="description2">
-                        <p class="title2">Yao Xiong</p>
+                        <p class="title2">Dr. Yao Xiong</p>
                         <p class="subtitle">PhD Aug 2022</p>
                          <p class="subtitle">Now <strong>Postdoctoral Research Associate at Northhwestern University Evanston, IL </strong></p>
                     </div>
@@ -296,7 +319,7 @@
                         <p class="subtitle">now Ph.D. student at Ohio State University, Columbus</p>
                     </div>
                 </div>
-<p>Last updated: Jan 23, 2023</p>
+<p>Last updated: Aug 8, 2023</p>
 
                 </ul>
             </div>
