--- a/news.html
+++ b/news.html
@@ -82,6 +82,26 @@
 
                 <h1 class="page-header">News</h1>
 
+<h1 class="page-header"><small>August 2023</small></h1>
+
+<p>
+<strong> Congratulations to Arefin Mustafa Anik on presenting a lighting talk at LAMMPS Virtual Workshop and Symposium 2023.  </strong> 
+<p>
+The recording will be available at: <strong><a href= https://www.lammps.org/workshops/Aug23/> https://www.lammps.org/workshops/Aug21/</a></strong> . 
+<p>
+Currently the recording of the live stream of this workshop is available on <strong><a href= https://www.youtube.com/@templelammps/streams/>youtube live stream </a></strong>  
+</p>
+__________
+<p>
+<strong>Congratulations to all the authors on our recent publication </strong>: Erik LS Antonio, Arefin M Anik, Olga Kuksenok, Igor Luzinov, <a href= https://pubs.acs.org/doi/10.1021/acsami.3c07464> "<strong>“Enhancement of Polypropylene 3D-Printed Structures via the Addition of SiC Whiskers and Microwave Irradiation”</a></strong> <strong> ACS Applied Materials & Interfaces</Strong>
+<p>
+__________
+<p>
+<strong> Congratulations to Arefin Mustafa Anik on presenting his research in the Fall ACS 2023 meeting</strong>
+</p>
+
+
+
 <h1 class="page-header"><small>May 2023</small></h1>
 <p><strong>Congratulations Dr. Vaibhav Palkar! Wishing you success in your future endeavors!</strong> 
 
@@ -372,7 +392,7 @@ Congratulations to Oksana Savchak!<br><br>
 	</footer>
 
 	-->
-<p>Last updated: Apr 2, 2023</p>
+<p>Last updated: Sep 19, 2023</p>
 
 <!-- Start of StatCounter Code for Default Guide -->
 <script type="text/javascript">
