--- a/pubs.html
+++ b/pubs.html
@@ -82,6 +82,10 @@
                 </h1>
 <!-- Image -->
                 <A href=https://pubs.acs.org/doi/abs/10.1021/acs.jpcb.1c09570><img src="images/jpcb.png" class="illustration"></A>                 
+<p> 100. Erik LS Antonio, Arefin M Anik, Olga Kuksenok, Igor Luzinov, <a href= https://pubs.acs.org/doi/10.1021/acsami.3c07464> "<strong>“Enhancement of Polypropylene 3D-Printed Structures via the Addition of SiC Whiskers and Microwave Irradiation”</a></strong> <strong> ACS Applied Materials & Interfaces</Strong>, https://pubs.acs.org/doi/10.1021/acsami.3c07464, (2023)</p>
+
+<p> 99. Vaibhav Palkar, Olga Kuksenok, <strong>“Modeling Reactive Hydrogels: Focus on Controlled Degradation”</strong> , in <strong>Dynamics and Transport in Macromolecular Networks: Theory, Modelling, and Experiments (WILEY-VCH)</strong>, edited by Li-Tang Yan (in press, 2023)</p>
+
 <p> 98. Vaibhav Palkar, Devanshu Thakar, Olga Kuksenok <a href= https://pubs.acs.org/doi/full/10.1021/acs.macromol.2c02470> " <strong>Nanogel Degradation at Soft Interfaces and in Bulk: Tracking Shape Changes and Interfacial Spreading"</a></strong>, <em><strong> Macromolecules </em></strong> 56 (4),1289-1302, (2023) </p>
 </strong> 
 <p> 97. Yao Xiong, Olga Kuksenok <a href= https://www.sciencedirect.com/science/article/pii/S2589004222018788> " <strong>Photocontrol of pattern formation and hysteresis loops in polymer gels with host-guest interactions"</a></strong>, <em> <strong>iScience </strong></em> 25 (12),105606, (2022) </p>
@@ -301,7 +305,7 @@
 </p>
 <p>1. Kuksenok, O., Sugakov, V.I., and Shiyanovskii, S.V., “On the mechanism of negative effect of ionizing irradiation on conductivity of liquid crystals,” Ukrainian Physical Journal, 37 (4), 589-594 (1992).
 
-<p>Last updated: Mar 14, 2023</p>
+<p>Last updated: Sep 19, 2023</p>
 
                 </ul>
             </div>
