--- a/index.html
+++ b/index.html
@@ -104,14 +104,14 @@
 
 
                 <p style="margin-top:20px">
-                <b>We focus on computational design of advanced polymer-based materials. Such materials include biomimetic materials, where the aim is to design fully synthetic materials with properties and functionalities inspired by nature. For the current updates, check our <a href=https://cecas.clemson.edu/kuksenoklab/news.html>News</a> page.</b>
+                <b>We focus on computational design of advanced polymer-based materials, including sustainable materials and biomimetic materials with properties and functionalities inspired by nature. For the current updates, check our <a href=https://cecas.clemson.edu/kuksenoklab/news.html>News</a> page.</b>
 
                 <br></br> About the PI: Dr. Kuksenok is an Associate Professor and Director of Graduate Program at the Materials Science and Engineering Department at Clemson University.  She  received her PhD in Physics and Mathematics from the Institute of Physics, National Academy of Sciences of Ukraine, Kiev, Ukraine. Dr. Kuksenok’s research interests and accomplishments include modeling of polymer blends and networks on multiple length scales, computational design of responsive materials, biomimetic and biological materials, and pattern formation in non-equilibrium systems.  <em><a href=https://scholar.google.com/citations?user=T9icvtgAAAAJ&hl=en&oi=ao><strong>More on Google Scholar </strong></a></em></p>
                 <br>
                 <div class="h2">Research Areas</div>
 <ul>
+<li>Modeling polymers properties and degradation </li>
 <li>Modeling soft active materials</li>
-<li>Understanding degradation of polymers </li>
 <li>Computational design of biomimetic materials</li>
 <li>Pattern formation in synthetic and biological systems</li>
 </ul>
@@ -121,20 +121,24 @@
 
                 </ul>
 
+<link href="css/mystyles.css" rel="stylesheet">
+
+
 <p>&nbsp;</p>
 
-<div class="h2"> Openings <small style="background-color:#eee; padding:3px;"><em>Updated!</em></small></div>
+<div class="h2"> Openings <small style="background-color:#eee; padding:3px;"><em class="flashing-text">Updated Oct 2023 </em></small></div>
+
 <p>&nbsp;</p>
 
+<p><strong>Postdoctoral research associate: </strong> We currently have a postdoctoral opening available immediately; the position will remain open until filled.  The postdoctoral researcher will focus on the mesoscale modeling of polymers synthesized from waste feedstocks (such as oils from food waste, inedible biomass,  and carbon dioxide) to controllably tune the properties of the resulting materials. The computational efforts will be carried out  in close collaboration with the concurrent experiments within the new <em><a href=https://go.sc.edu/pce </a> <strong>NSF Center for Polymers for a Circular Economy (PCE) </strong></a></em>. Demonstrated experience in <strong> computational modeling of polymers </strong>is required. The candidates should email their CV to <em>okuksen@clemson.edu</em>. 
 
 <p><strong>Graduate students:</strong> We are often looking for highly motivated students to join our group to pursue their PhD or MS degrees in Materials Science and Engineering. For current openings please contact Dr. Kuksenok directly.  Some prior programming experience (C/C++, python, LAMMPS, COMSOL Multiphysics@, or related experience) is required. 
 
-<p>&nbsp;</p>
 <p><strong>Undergraduate research assistants:</strong>    We have several openings for Clemson undergraduate students to participate in research projects involving computational modeling <strong>available immediately</strong>. Some prior programming experience (preferably in one of the following: COMSOL Multiphysics@, C/C++, Python, LAMMPS or related) is required. If interested please send your curriculum vitae and a brief description of your programming experience to Dr. Kuksenok at <em>okuksen@clemson.edu</em>
 <br></br>
 
 <p>&nbsp;</p>
-<p>Last updated: Aug 8, 2023</p>
+<p>Last updated: Oct 14, 2023</p>
 
 <p>&nbsp;</p>
 
