--- a/news.html
+++ b/news.html
@@ -81,6 +81,11 @@
             <div class="col-lg-12">
 
                 <h1 class="page-header">News</h1>
+<h1 class="page-header"><small>October 2023</small></h1>
+
+<p>
+<strong> We are excited to be a part of the new <a href=https://go.sc.edu/pce/> NSF Center for Polymers for a Circular Economy (PCE) </a> led by the University of South Carolina. </strong>
+</p>
 
 <h1 class="page-header"><small>August 2023</small></h1>
 
