--- a/people.html
+++ b/people.html
@@ -91,7 +91,18 @@
                     </div>
                 </div>
                 <div class="item">
-
+<h2>Post-Doctoral Researchers</h2>
+        <div class="small2">
+                        <a name=st><img src=images/people/Amir.jpg width=240></a>
+                    </div>
+                    <div class="description2">
+                        <p class="title2">Dr. Amir Suhail</p>
+                        <p class="subtitle">Post-Doctoral Researcher</p>
+                        <p class="subtitle">asuhail@<img src=images/emailsuffix.png height=16></p>
+                    </div>
+                </div>
+                <div class="item">
+<h2>Graduate Students</h2>
         <div class="small2">
                         <a name=st><img src=images/people/Anik.jpg width=240></a>
                     </div>
@@ -115,7 +126,7 @@
                 <div class="item">
 
                     <div class="small2">
-                        <a name=vp><img src=images/people/Rupali.png width=240></a>
+                        <a name=vp><img src=images/people/Rupali.jpg width=240></a>
                     </div>
                     <div class="description2">
                         <p class="title2">Rupali Sharma</p>
